--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 </head>
 
 <body>
-  <div class="panel">
+ 
     <nav>
       <ul class="header">
-        <li style="margin: 8px" class="headerli">
+        <li style="margin-top: 8px; margin-right: -13px;" class="headerli">
           <a href="https://mail.google.com/mail/?tab=wm&authuser=0&ogbl">Gmail</a>
         </li>
-        <li style="margin: 8px; margin-left: -2px;" class="headerli">
+        <li style="margin-top: 8px; margin-left: -2px" class="headerli">
           <a href="https://www.google.com.tr/imghp?hl=en&tab=wi&authuser=0&ogbl">Görseller</a>
         </li>
-        <li class="app-icon-li">
-          <a class="app-icon" title="Google uygulamaları" href="https://www.google.com.tr/intl/tr/about/products"
+        <li style="margin-top: 5px; margin-right: -11px" class="headerli">
+          <a style="width: 23px" class="app-icon" title="Google uygulamaları" href="https://www.google.com.tr/intl/tr/about/products"
             aria-expanded="false" role="button" tabindex="0">
             <svg viewBox="0 0 24 24">
               <path
@@ -28,66 +28,68 @@
             </svg>
           </a>
         </li>
-        <li class="pic headerli">
+        <li class="headerli">
           <a href="https://www.github.com/ozlemsoydan" target="_blank">
-            <img src="./assets/profilepic.jpg" width="32" alt="" style="margin-right: 1px; border-radius: 50%;" /></a>
+            <img class="pic" src="./assets/profilepic.jpg" width="32" height="32" alt="" style="border-radius: 50%;" /></a>
         </li>
       </ul>
     </nav>
-  </div>
+ 
 
-  <div class="container">
+  <div class="panel" style="padding-top: 20px;">
+    <div class="container">
 
-    <img class="google-logo" src="assets/logo.png" alt="Google Logo" />
+      <img class="google-logo" src="assets/logo.png" alt="Google Logo" />
 
-  </div>
+    </div>
 
-  <div class="search-area">
-    <div class="search">
-      <div class="search-img">
+    <div class="search-area">
+      <div class="search">
+        <div class="search-img">
+          <span>
+            <svg focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
+              <path
+                d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z">
+              </path>
+            </svg>
+          </span>
+        </div>
+        <div class="input-enter">
+          <div class="input-area">
+            <input type="text" class="input" maxlength="2048" autofocus="true" />
+          </div>
+        </div>
+      </div>
+      <div jscontroller="Y9t9Sc" class="keybord" title="Harf çevirme aracı" role="button" tabindex="0"
+        jsaction="h5M12e;rcuQ6b:npT2md">
         <span>
-          <svg focusable="false" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24">
-            <path
-              d="M15.5 14h-.79l-.28-.27A6.471 6.471 0 0 0 16 9.5 6.5 6.5 0 1 0 9.5 16c1.61 0 3.09-.59 4.23-1.57l.27.28v.79l5 4.99L20.49 19l-4.99-5zm-6 0C7.01 14 5 11.99 5 9.5S7.01 5 9.5 5 14 7.01 14 9.5 11.99 14 9.5 14z">
+          <img src="https://www.gstatic.com/inputtools/images/tia.png" tia_disable_swap="true" tia_field_name="q"
+            jsname="JyIpdf" data-atf="0" data-frt="0" tia_property="web">
+        </span>
+      </div>
+
+      <div jscontroller="unV4T" class="search-voice" title="Sesle arama yapın" role="button" tabindex="0"
+        jsaction="h5M12e;rcuQ6b:npT2md" data-ved="0ahUKEwjWgff00Z73AhW-RPEDHes9B24Qvs8DCAY">
+        <span>
+          <svg focusable="false" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+            <path fill="#4285f4"
+              d="m12 15c1.66 0 3-1.31 3-2.97v-7.02c0-1.66-1.34-3.01-3-3.01s-3 1.34-3 3.01v7.02c0 1.66 1.34 2.97 3 2.97z">
+            </path>
+            <path fill="#34a853" d="m11 18.08h2v3.92h-2z"></path>
+            <path fill="#fbbc05"
+              d="m7.05 16.87c-1.27-1.33-2.05-2.83-2.05-4.87h2c0 1.45 0.56 2.42 1.47 3.38v0.32l-1.15 1.18z"></path>
+            <path fill="#ea4335"
+              d="m12 16.93a4.97 5.25 0 0 1 -3.54 -1.55l-1.41 1.49c1.26 1.34 3.02 2.13 4.95 2.13 3.87 0 6.99-2.92 6.99-7h-1.99c0 2.92-2.24 4.93-5 4.93z">
             </path>
           </svg>
         </span>
       </div>
-      <div class="input-enter">
-        <div class="input-area">
-          <input type="text" class="input" maxlength="2048" autofocus="true" />
-        </div>
-      </div>
-    </div>
-    <div jscontroller="Y9t9Sc" class="keybord" title="Harf çevirme aracı" role="button" tabindex="0"
-      jsaction="h5M12e;rcuQ6b:npT2md">
-      <span>
-        <img src="https://www.gstatic.com/inputtools/images/tia.png" tia_disable_swap="true" tia_field_name="q"
-          jsname="JyIpdf" data-atf="0" data-frt="0" tia_property="web">
-      </span>
     </div>
 
-    <div jscontroller="unV4T" class="search-voice" title="Sesle arama yapın" role="button" tabindex="0"
-      jsaction="h5M12e;rcuQ6b:npT2md" data-ved="0ahUKEwjWgff00Z73AhW-RPEDHes9B24Qvs8DCAY">
-      <span>
-        <svg focusable="false" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-          <path fill="#4285f4"
-            d="m12 15c1.66 0 3-1.31 3-2.97v-7.02c0-1.66-1.34-3.01-3-3.01s-3 1.34-3 3.01v7.02c0 1.66 1.34 2.97 3 2.97z">
-          </path>
-          <path fill="#34a853" d="m11 18.08h2v3.92h-2z"></path>
-          <path fill="#fbbc05"
-            d="m7.05 16.87c-1.27-1.33-2.05-2.83-2.05-4.87h2c0 1.45 0.56 2.42 1.47 3.38v0.32l-1.15 1.18z"></path>
-          <path fill="#ea4335"
-            d="m12 16.93a4.97 5.25 0 0 1 -3.54 -1.55l-1.41 1.49c1.26 1.34 3.02 2.13 4.95 2.13 3.87 0 6.99-2.92 6.99-7h-1.99c0 2.92-2.24 4.93-5 4.93z">
-          </path>
-        </svg>
-      </span>
+    <div class="buttons">
+      <a href=""><button class="googlesearch">Google'da Ara</button></a>
+      <a href=""><button class="feelinglucky">Kendimi Şanslı Hissediyorum</button></a>
     </div>
-  </div>
-
-  <div class="buttons">
-    <a href=""><button class="googlesearch">Google'da Ara</button></a>
-    <a href=""><button class="feelinglucky">Kendimi Şanslı Hissediyorum</button></a>
   </div>
 
 
